# dedoopsie

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  dedupe_safe_move.py  new.py  pyproject.toml
dedoopsie/: cli.py  core.py
dedupe/: cli.py  core.py
scripts/: Makefile
tests/: test_cli_dryrun.py  test_core.py  test_dedupe.py  test_dryrun_and_strategies.py
