
[project]
name = "dedoopsie"
version = "0.1.0"
description = "A safe and verifiable deduplication utility with dry/wet mode, hashing, and structured logs."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Gale Fagan" }]
license = { text = "BSD-2-Clause" }

[project.scripts]
dedupe = "dedoopsie.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dedupe"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --tb=short --strict-markers"
testpaths = ["tests"]
